tests/fixtures/dimensions/change_blast_radius/bad/u4.ts
import { core } from "./core";
export const u4 = core + 4;
